--- a/composer.json
+++ b/composer.json
@@ -15,10 +15,10 @@
     "require": {
         "php": ">=5.5.0",
         "psr/link": "~1.0@dev",
-        "symfony/http-foundation": "^4.1"
+        "symfony/http-foundation": "^3.4.17",
     },
     "require-dev": {
-        "phpunit/phpunit": "^7"
+        "phpunit/phpunit": "^5.7.27"
     },
 
     "autoload": {
