--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,7 @@
     "require": {
         "php": ">=5.5.0",
         "psr/link": "~1.0@dev",
-        "symfony/http-foundation": "^3.4.17",
+        "symfony/http-foundation": "^3.4.17"
     },
     "require-dev": {
         "phpunit/phpunit": "^5.7.27"
