--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,7 @@
     "require": {
         "php": ">=5.5.0",
         "psr/link": "~1.0@dev",
-        "symfony/http-foundation": "^3.4.17"
+        "symfony/http-foundation": "*"
     },
     "require-dev": {
         "phpunit/phpunit": "^5.7.27"
